--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+:root {
+    --borderR:5px;
+    --boxShadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    --uiFont: 'Poppins', sans-serif;
+    --displayFont: 'Open Sans', sans-serif;
+}
+
+
+
+
 * {
     padding: 0;
     margin: 0;
@@ -5,6 +15,7 @@
 }
 
 .formContainer {
+    margin-top: 10px;
     width: 500px;
     border: 1px solid black;
     padding: 10px;
@@ -25,13 +36,65 @@
     display:flex;
     gap:10px;
     align-items: center;
+    font-family: var(--uiFont);
+    font-size: 14px;
+    font-weight: bold;
+}
+
+#giphyImg {
+    display:flex;
+    object-fit: contain;
+    
 }
 
 .giphyImgDiv {
+    display: flex;
+    justify-content: center;
     border: 1px solid black;
     width: 500px;
+    height: 500px;
+    padding: 10px;
+    object-fit: contain;
 }
 
 .searchBtn {
     padding: 3px;
+    font-family: var(--uiFont);
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.giphyImgDiv, .formContainer {
+    box-shadow: var(--boxShadow);
+    border-radius: var(--borderR);
+}
+
+.resultDiv {
+    display: flex;
+    gap: 10px;
+    justify-content: space-evenly;
+    width: 500px;
+    align-items: center;
+    font-family: var(--displayFont);
+    text-align: center;
+}
+
+.locationTitle {
+    font-size: 32px;
+    font-weight: bold;
+}
+
+.temperatureDisplay {
+    font-size:24px;
+    font-weight: bold;
+}
+.iconDisplay {
+    display: flex;
+    height: auto;
+    width: 60px;
+    padding: 5px;
+}
+
+.weatherD{
+    font-size: 24px;
 }
